Adds the javadoc plugin so that the api documentation can be generated. Also fixes the default package.html template.
git-svn-id: http://escidev5.fiz-karlsruhe.de:8888/prototype/eSciDocCore@39085 5c398c58-3d0a-0410-a38c-d0825f6816e0